--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Shopify</title>
     <link rel="shortcut icon" href="./assets/images/logo/favicon_32x32.webp" type="image/x-icon">
+    <meta name="description" content="All-in-one edulweb e-commerce Template with multiple layouts and styles allows you to create different structures and satisfies any specific requirements for different kinds of business.">
+    <meta name="keywords" content="e-commerce, shopify, responsive design, best layout design, edulweb, developer, php, laravel">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
@@ -19,8 +21,8 @@
                 <a class="navbar-brand" href="#">LOGO</a>
                 
                 <div class="nav__more__icons nav__mobile">
-                    <a href=""><ion-icon class="icons" name="search-outline"></ion-icon></a>
-                    <a href=""><ion-icon class="icons" name="cart-outline"></ion-icon></a>
+                    <a href="#"><ion-icon class="icons" name="search-outline"></ion-icon></a>
+                    <a href="#"><ion-icon class="icons" name="cart-outline"></ion-icon></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -186,8 +188,8 @@
                     </ul>
                 </div>
                 <div class="nav__more__icons nav__desktop">
-                    <a href=""><ion-icon class="icons" name="search-outline"></ion-icon></a>
-                    <a href=""><ion-icon class="icons" name="cart-outline"></ion-icon></a>
+                    <a href="#"><ion-icon class="icons" name="search-outline"></ion-icon></a>
+                    <a href="#"><ion-icon class="icons" name="cart-outline"></ion-icon></a>
                 </div>
             </div>
         </nav>
@@ -220,7 +222,7 @@
                 <div class="col-md-4 sub__items">
                     <div class="s__img">
                         <a href="#">
-                            <img src="./assets/images/banner/s-banner1.avif" width="100%" alt="">
+                            <img src="./assets/images/banner/s-banner1.avif" width="100%" alt="img">
                         </a>
                     </div>
                     <div class="s__title">
@@ -230,7 +232,7 @@
                 <div class="col-md-4 sub__items">
                     <div class="s__img">
                         <a href="#">
-                            <img src="./assets/images/banner/s-banner2.avif" width="100%" alt="">
+                            <img src="./assets/images/banner/s-banner2.avif" width="100%" alt="img">
                         </a>
                     </div>
                     <div class="s__title">
@@ -240,7 +242,7 @@
                 <div class="col-md-4 sub__items">
                     <div class="s__img">
                         <a href="#">
-                            <img src="./assets/images/banner/s-banner3.avif" width="100%" alt="">
+                            <img src="./assets/images/banner/s-banner3.avif" width="100%" alt="img">
                         </a>
                     </div>
                     <div class="s__title">
@@ -263,7 +265,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/1-1.webp" alt="">
+                            <img src="./assets/images/products/1-1.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -285,7 +287,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/1.webp" alt="">
+                            <img src="./assets/images/products/1.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -307,7 +309,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/2.webp" alt="">
+                            <img src="./assets/images/products/2.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -329,7 +331,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/3.webp" alt="">
+                            <img src="./assets/images/products/3.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -351,7 +353,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/1.webp" alt="">
+                            <img src="./assets/images/products/1.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -373,7 +375,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/3.webp" alt="">
+                            <img src="./assets/images/products/3.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -395,7 +397,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/2.webp" alt="">
+                            <img src="./assets/images/products/2.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -418,7 +420,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/3.webp" alt="">
+                            <img src="./assets/images/products/3.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -476,7 +478,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/1-1.webp" alt="">
+                            <img src="./assets/images/products/1-1.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -498,7 +500,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/1.webp" alt="">
+                            <img src="./assets/images/products/1.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -520,7 +522,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/2.webp" alt="">
+                            <img src="./assets/images/products/2.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -542,7 +544,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/3.webp" alt="">
+                            <img src="./assets/images/products/3.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -564,7 +566,7 @@
                 <div class="products">
                     <div class="product__body">
                         <div class="pro__img">
-                            <img src="./assets/images/products/3.webp" alt="">
+                            <img src="./assets/images/products/3.webp" alt="img">
                         </div>
                         <div class="pro__top_btn">
                             <ion-icon name="heart-outline"></ion-icon>
@@ -596,7 +598,7 @@
                 <div class="col-md-4 sub__items">
                     <div class="lg__img">
                         <a href="#">
-                            <img src="./assets/images/banner/bannerl1.webp" width="100%" alt="">
+                            <img src="./assets/images/banner/bannerl1.webp" width="100%" alt="img">
                         </a>
                     </div>
                     <div class="lg_content">
@@ -611,7 +613,7 @@
                 <div class="col-md-4 sub__items">
                     <div class="s__img">
                         <a href="#">
-                            <img src="./assets/images/banner/bannerl2.webp" width="100%" alt="">
+                            <img src="./assets/images/banner/bannerl2.webp" width="100%" alt="img">
                         </a>
                     </div>
                     <div class="lg_content">
@@ -626,7 +628,7 @@
                 <div class="col-md-4 sub__items">
                     <div class="s__img">
                         <a href="#">
-                            <img src="./assets/images/banner/bannerl3.webp" width="100%" alt="">
+                            <img src="./assets/images/banner/bannerl3.webp" width="100%" alt="img">
                         </a>
                     </div>
                     <div class="lg_content">
@@ -645,14 +647,14 @@
     <section id="brands">
         <div class="container">
             <div class="brands">
-                <img src="./assets/images/brands/1.webp" alt="">
-                <img src="./assets/images/brands/2.webp" alt="">
-                <img src="./assets/images/brands/3.webp" alt="">
-                <img src="./assets/images/brands/4.webp" alt="">
-                <img src="./assets/images/brands/5.webp" alt="">
-                <img src="./assets/images/brands/2.webp" alt="">
-                <img src="./assets/images/brands/3.webp" alt="">
-                <img src="./assets/images/brands/4.webp" alt="">
+                <img src="./assets/images/brands/1.webp" alt="img">
+                <img src="./assets/images/brands/2.webp" alt="img">
+                <img src="./assets/images/brands/3.webp" alt="img">
+                <img src="./assets/images/brands/4.webp" alt="img">
+                <img src="./assets/images/brands/5.webp" alt="img">
+                <img src="./assets/images/brands/2.webp" alt="img">
+                <img src="./assets/images/brands/3.webp" alt="img">
+                <img src="./assets/images/brands/4.webp" alt="img">
             </div>
         </div>
     </section>
@@ -666,14 +668,14 @@
                 <p>Phasellus lorem malesuada ligula pulvinar commodo maecenas</p>
             </div>
             <div class="gallery">
-                <img src="./assets/images/gallery/1.jpg" alt="">
-                <img src="./assets/images/gallery/2.avif" alt="">
-                <img src="./assets/images/gallery/3.avif" alt="">
-                <img src="./assets/images/gallery/4.avif" alt="">
-                <img src="./assets/images/gallery/5.avif" alt="">
-                <img src="./assets/images/gallery/2.avif" alt="">
-                <img src="./assets/images/gallery/3.avif" alt="">
-                <img src="./assets/images/gallery/4.avif" alt="">
+                <img src="./assets/images/gallery/1.jpg" alt="img">
+                <img src="./assets/images/gallery/2.avif" alt="img">
+                <img src="./assets/images/gallery/3.avif" alt="img">
+                <img src="./assets/images/gallery/4.avif" alt="img">
+                <img src="./assets/images/gallery/5.avif" alt="img">
+                <img src="./assets/images/gallery/2.avif" alt="img">
+                <img src="./assets/images/gallery/3.avif" alt="img">
+                <img src="./assets/images/gallery/4.avif" alt="img">
             </div>
             <div class="hero__button" style="margin: auto; padding-top: 20px;">
                 <a href="#" class="btn__primary btn__dark">View Gallery</a>
@@ -772,7 +774,7 @@
                                 <div class="footer-block__list-social" style="margin-top: 35px">
                                     <ul class="list-unstyled list-social clearfix" role="list">
                                         <li>
-                                            <a href="">
+                                            <a href="#">
                                                 <ion-icon name="logo-facebook"></ion-icon>
                                             </a>
                                         </li>
